<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/orange"
        android:padding="16dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:fontFamily="@font/clash_display_medium"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clash_display_regular"
            android:text="@string/product_description"
            android:textSize="14sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/clash_display_medium"
            android:text="@string/price"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/thumbnail"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/buy_text"
            android:fontFamily="@font/clash_display_medium"
            android:background="@drawable/buy_btn"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>